GNOME Bugzilla – Bug 758893
Journal spam: Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries
Last modified: 2016-03-23 16:51:50 UTC
My journal is continuously spammed with messages such as: $ journalctl -f -- Logs begin at Sun 2014-06-01 03:10:01 CEST. -- Dec 01 11:53:29 localhost org.gnome.Shell.desktop[2211]: (gnome-shell:2211): Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries Dec 01 11:53:29 localhost org.gnome.Shell.desktop[2211]: (gnome-shell:2211): Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries Dec 01 11:53:29 localhost org.gnome.Shell.desktop[2211]: (gnome-shell:2211): Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries Dec 01 11:53:29 localhost org.gnome.Shell.desktop[2211]: (gnome-shell:2211): Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries Dec 01 11:53:29 localhost org.gnome.Shell.desktop[2211]: (gnome-shell:2211): Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries ^C Would be nice to fix this. $ rpm -q gnome-shell gnome-shell-3.19.2-1.fc24.x86_64 $ rpm -q gtk3 gtk3-3.19.3-2.fc24.x86_64
I'm also seeing this with current Fedora Rawhide, causing significant journal rotation and making it hard to see anything else in the logs. See also https://bugzilla.gnome.org/show_bug.cgi?id=747585 .
The same happens to me. I'm not sure if it is related but I have also seen raise in cpu usage. Gnome shell after update to 3.19.4-1 (fedora 24) now consumes about 15 (up to 20) percent of cpu.
Right after I send the comment I realized that gnome-shell stopped consuming the processor so much. When I looked on abrt there was message about some problem with intel driver from that time. The messages from gnome-shell aren't spamming the journal since than so I guess it could be somehow related. I've created the bug with abrt: https://bugzilla.redhat.com/show_bug.cgi?id=1302619 After this the spamming of journal have stopped.
This seems related to multi-monitor on my system (Dell XPS13 Intel Ivybridge Mobile). When the 2nd monitor is unplugged, gnome-shell is fine, but plug it in and I get this problem.
(In reply to Colin Guthrie from comment #4) > This seems related to multi-monitor on my system (Dell XPS13 Intel Ivybridge > Mobile). When the 2nd monitor is unplugged, gnome-shell is fine, but plug it > in and I get this problem. I don't think this is the case. I have single monitor now and quite freshly restarted system and my journal is spammed. But may be you are experiencing something as Petr mentioned in comment 3
multi-monitor might also trigger it, but on my system it happens every time i log in
I pushed this commit in the hopes that I'll fix it. But nobody has tested it yet. I'm closing this bug anyway, because I'm an optimist. commit c3dc0d80f1353ac66882ca3288ca7e9a13c47d6f Author: Benjamin Otte <otte@redhat.com> Date: Mon Feb 22 21:38:03 2016 +0100 container: Request layout again depending on layout mode Containers with RESIZE_MODE_PARENT should never request layout and those with RESIZE_MODE_IMMEDIATE should only request it for updating CSS. Fixes clutter embeds (like the tray icon embed in gnome-shell) continuously requesting relayout when all they want to do is relegate relayout to Clutter.
Tested this patch on top of gtk+-3.19.9 with gnome-shell-3.19.90 and I sadly, I still get the bug :( Feb 23 11:25:01 jimmy org.gnome.Shell.desktop[5419]: (gnome-shell:5419): Gdk-WARNING **: gdk-frame-clock: layout continuously requested, giving up after 4 tries Sorry!
It seems I can reproduce this at will by booting a current Rawhide live image (as it causes several AVCs on boot, and twiddling with the tray icon triggers the bug quite reliably). I can also build live images. So I can throw some GTK+ builds at this probably tomorrow. I just got sidetracked by something urgent for the last two days, sorry.
I've pushed a fix to GTK+ that makes GtkStatusIcon not react to single pixel size changes. That should prevent this loop between size 24 and 25.
I've pushed the same fix to gtk2, since seapplet is still gtk2.
For reference: https://git.gnome.org/browse/gtk+/commit/?id=434b08fe2498017822ea22be5c5e1b8d9b434cd6 https://git.gnome.org/browse/gtk+/commit/?h=gtk-2-24&id=2289695b69ee125e5b7f54538a12d3cf741028b7
I've not seen this one since the above patches were applied. I think it can now be solved.